﻿Pulse Changelog

Pulse-4.13.3
 * Only apply VM Heading or Tilt offset if value is given.
 * In Transform, check if the ADCP has more than 3 beams (SeaSEVEN).
 - Display lag length in View.

Pulse-4.13.2
 * Fixed the bugs with Status2. 
 - Fixed EnsembleInterval to show a double value and not Int in Project Setup.
 - Relayed out the ADCP Configuration in Project setup.
 - Added Ship Track view to Views page.
 - In Project Setup, fixed displaying timing for Burst Mode
 - When creating a new subsystem configuration, check if burst mode is used.
 - Fix the tooltips in the displays.
 * In ViewDataTextViewModel, fixed bug if no WP velocity data is present.

Pulse-4.13.1
 - Added BurstIndex and BurstID to ViewDataTextEnsembleViewModel.

Pulse-4.13.0
 - Added Larger 3D Profile Plot
 - Added ViewDataProfile3DPViewModel and View
 - Added ViewDataProfile3DBaseViewModel and View.

Pulse-4.12.10
 - Added features to view the data from upward looking ADCP
 - Added screening in TimeSeries for Range Tracking
 - Flip HeatMap plots on upward looking ADCP
 - Fix Profile plots with last bin.
 - Flip Profile plots on upward looking ADCP

Pulse-4.12.9
 - Added Water Track Speed on DVL Page.
 - Added Ship Velocity and Ship WaterMass to View Data VM and View.

Pulse-4.12.8
 - Update PD0 data types to handle any number of beams including 3 beam systems.
 - In TimeSeries, added SystemSetup Boost Pos and Neg Voltage.
 - Added Ship Water Track from PD0 data.  
 - Fix the scale of the water track values in PD0
 - Automatically play file when file selected.

Pulse-4.12.7
 - In TerminalAdcpViewModel, made the Wait States for Advanced BREAK doubles in SendAdvancedBreak().
 - In MatlabMatrixExporter,  added Range of First Bin and Bin Size to ENS data.
 * In VelocityVector, in GenerateShipVectors, fixed bug with getting the size.

Pulse-4.12.6
 * Fixed some issues decoding PD0.
 * Fixed some issues with NMEA data type.
 * Fixed some issues exporting data.

Pulse-4.12.5