@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-		<title>Version 4.13.3 ChangeLog</title>
+		<title>Version 4.13.4 ChangeLog</title>
 		<style type="text/css">
             .auto-style1 {
 	            text-decoration: underline;
@@ -10,7 +10,9 @@
 	</head>
 	<body>
         <p>
-            <br /><span class="auto-style1">Pulse-4.13.3</span>
+            <br /><span class="auto-style1">Pulse-4.13.4</span>
+            <br />  Pulse-4.13.4
+            <br />  - Added options to turn on or off MarkBadBelowBottom and MarkBadAboveSurface for Amplitude and Correlation.
             <br />  Pulse-4.13.3
             <br />  * Only apply VM Heading or Tilt offset if value is given.
             <br />  * In Transform, check if the ADCP has more than 3 beams (SeaSEVEN).
@@ -164,7 +166,11 @@
             <br />   - In PredictionModel, fix bug in GetBurstDataStorage() when calculating number of burst per deployment.
             <br />   - In PredictionModel, fix bug in CalculatePowerBurst() when calculating number of burst per deployment.
             <br />
-            <br /><span class="auto-style1">Pulse-Display-4.13.1</span>
+            <br /><span class="auto-style1">Pulse-Display-4.13.2</span>
+            <br />   Pulse-Display-4.13.2
+            <br />   - Added Additional screen options for MarkBadBelowBottom and MarkBadAboveSurface for Amplitude and Correlation.
+            <br />   - In ScreenDataViewModel, allow user to select which parts to screen in MarkBadBelowBottom and MarkBadAboveSurface.
+            <br />
             <br />   Pulse-Display-4.13.1
             <br />   - Fixed bug in BinPlot3D if no water profile data is available.
             <br />
@@ -267,7 +273,10 @@
             <br />   - In ScreenDataViewModel, added FillInMissingWpData() to fill in data when Water Profile is turned off.
             <br />   - Change the images in PlaybackView.xaml to VisualBrushes.  This decreased startup time dramatically.
             <br />   - In DistanceTraveled, in AccumulateGps() verify a good _FirstGpsPos is set.
-            <br /><span class="auto-style1">RTI-3.4.18</span>
+            <br /><span class="auto-style1">RTI-3.4.19</span>
+            <br />   RTI-3.4.19
+            <br />   - In ScreenMarkBadBelowBottom and ScreenMarkBadAboveSurface added options to turn on or off MarkBadBelowBottom for Amplitude and Correlation.
+            <br />
             <br />   RTI-3.4.18
             <br />   * Only apply VM Heading or Tilt offset if value is given.
             <br />   * In Transform, check if the ADCP has more than 3 beams (SeaSEVEN).
