@@ -1,5 +1,8 @@
 ﻿Pulse Changelog
 
+Pulse-4.13.4
+  - Added options to turn on or off MarkBadBelowBottom and MarkBadAboveSurface for Amplitude and Correlation.
+
 Pulse-4.13.3
  * Only apply VM Heading or Tilt offset if value is given.
  * In Transform, check if the ADCP has more than 3 beams (SeaSEVEN).
